--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-lazy-load-image-component": "^1.5.6",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
